--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
+    "vue-masonry": "^0.16.0",
     "vuetify": "^3.1.10",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
@@ -42,7 +43,7 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {}
-  }, 
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
